--- a/原型和原型链.md
+++ b/原型和原型链.md
@@ -1,1 +1,63 @@
 #   原型和原型链
+
+![index](https://raw.githubusercontent.com/esperanza1211/note/master/image/JS%E5%8E%9F%E5%9E%8B%E5%85%B3%E7%B3%BB%E5%9B%BE.png)
+
+*   函数
+
+    每一个函数都一个默认的属性：prototype
+
+    prototype是一个对象
+
+*   对象
+
+    每一个对象都有一个默认属性：`__proto__`
+
+    `__proto__`也是一个对象
+
+ 对象的`__proto__`其实就是这个对象的构造函数的`prototype`
+
+ 当我们去调用一个对象的属性或方法的时候，首先会在对象自身上查找，如果没有，则会查找对象的`__proto__`下是否存在
+
+        function Foo(v) {
+            this.y = v;
+            // this.__proto__ = Foo.prototype
+        }
+        Foo.x = 100;
+        Foo.prototype.x = 10;
+
+        var b = new Foo(20);
+        var c = new Foo(30);
+
+        console.log( b.y );
+        console.log( c.y );
+
+        console.log( b.x );
+        // b.x => b.__proto__.x == Foo.prototype.x
+        //c.x = 100;
+        //c.__proto__.x = 100;
+        console.log( c.x );
+        // b.x => b.__proto__.x == Foo.prototype.x
+
+        //Foo.prototype = new Object();
+
+        Object.prototype.z = 1000;
+
+        console.log( b.z );
+        // b.z => b.__proto__.z == Foo.prototype.z (Foo.prototype也是一个对象) => Foo.prototype.__proto__.z == Object.prototype.z => Object.prototype.__proto__.z == (Object.prototype是null)
+
+        Function.prototype.y = 100000;
+
+        console.log(Foo.x)
+        console.log(Foo.y)
+        console.log(Foo.z)
+
+        /*
+        * 函数的构造函数是 Function
+        * */
+        //function a() {alert(1)}
+        //var a = new Function('x', 'y', 'alert(x+y)');
+        //console.log(a);
+        //a(1,2);
+
+        // Foo.y => Foo.__proto__.y == Function.prototype.y
+        // Foo.z => Foo.__proto__.z == Function.prototype.z => Function.prototype.__proto__.z == Object.prototype.z
