--- a/面试题.md
+++ b/面试题.md
@@ -2,15 +2,20 @@
 
 *   ES6中let、const、var的区别是什么？
     
-    let和const在变量声明前使用会报错，var在变量声明前使用提示undefined。
-    let和const有块级作用域，var则是全局
-    const声明的是常量，声明后不可改变，对象则不改变地址，但对象本身是可变的。
+>   let和const在变量声明前使用会报错，var在变量声明前使用提示undefined。
+
+>   let和const有块级作用域，var则是全局
+
+>   const声明的是常量，声明后不可改变，对象则不改变地址，但对象本身是可变的。
 
 *   简要手绘盒子模型，并对边框和边距进行标注。
+
+    ![index](https://raw.githubusercontent.com/esperanza1211/note/master/image/%E7%9B%92%E6%A8%A1%E5%9E%8B.jpg)
 
 *   界面div三平分除了flex布局外，简写其他两种布局代码。
 
 *   html5和css3中新增了哪些标签和属性？
+    
 
 *   用css3写一个开关按钮，按下时置灰变色，并改变按钮文字。（如按下之前是on，按下之后是off）。
 
