--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -15,9 +15,57 @@
 *   界面div三平分除了flex布局外，简写其他两种布局代码。
 
 *   html5和css3中新增了哪些标签和属性？
-    
+
+    [HTML5](https://github.com/esperanza1211/note/blob/master/HTML5.md)
+
+    [CSS3](https://github.com/esperanza1211/note/blob/master/CSS3.md)
 
 *   用css3写一个开关按钮，按下时置灰变色，并改变按钮文字。（如按下之前是on，按下之后是off）。
+
+```
+html:
+<input type="checkbox" id="inp" />
+<label for="inp"></label>
+
+css:
+input{
+	width: 50px;
+	height: 50px;
+	display: none;
+}
+label{
+	width: 200px;
+	height: 100px;
+	display: inline-block;
+	border: 3px solid #ccc;
+	border-radius: 100px;
+	transition: .5s;
+}
+label:before{
+	content: "off";
+	font: 50px/2 "微软雅黑";
+	color: #ccc;
+	text-align: center;
+	display: inline-block;
+	width: 100px;
+	height: 100px;
+	background-color: #eee;
+	border-radius: 100px;
+	border: 1px solid #9d9d9d;
+	box-shadow: 0 0 10px 1px #000;
+	margin-top: -1px;
+	margin-left: -1px;
+	transition: .5s;
+}
+input:checked+label{
+	background-color: #ccc;
+}
+input:checked+label:before{
+	content: "on";
+	background-color: #fff;
+	margin-left: 99px;
+}
+```
 
 *   对数组`[5,6,6,7,8,8]`进行去重，ES5或者ES6方法，谈谈对ES6中`=>`的理解。
 
@@ -41,6 +89,8 @@
 *   CSS优先级？
 
 *   CSS3有哪些新特性
+
+>   可以对CSS3的新特性做一个简单的分类，在布局方面新增了flex布局，在选择器方面新增了例如:first-of-type,nth-child等选择器， 在盒模型方面添加了box-sizing来改变盒模型，在动画方面增加了animation、2d变换、3d变换等。在颜色方面添加透明、rgba等，在字体方面 允许嵌入字体和设置字体阴影，同时当然也有盒子的阴影，最后还有关键的媒体查询。
 
 *   JS  `split()` `join()`的区别？
 
