--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -22,50 +22,51 @@
 
 *   用css3写一个开关按钮，按下时置灰变色，并改变按钮文字。（如按下之前是on，按下之后是off）。
 
-```
-html:
-<input type="checkbox" id="inp" />
-<label for="inp"></label>
 
-css:
-input{
-	width: 50px;
-	height: 50px;
-	display: none;
-}
-label{
-	width: 200px;
-	height: 100px;
-	display: inline-block;
-	border: 3px solid #ccc;
-	border-radius: 100px;
-	transition: .5s;
-}
-label:before{
-	content: "off";
-	font: 50px/2 "微软雅黑";
-	color: #ccc;
-	text-align: center;
-	display: inline-block;
-	width: 100px;
-	height: 100px;
-	background-color: #eee;
-	border-radius: 100px;
-	border: 1px solid #9d9d9d;
-	box-shadow: 0 0 10px 1px #000;
-	margin-top: -1px;
-	margin-left: -1px;
-	transition: .5s;
-}
-input:checked+label{
-	background-color: #ccc;
-}
-input:checked+label:before{
-	content: "on";
-	background-color: #fff;
-	margin-left: 99px;
-}
-```
+>   ```
+>   html:
+    <input type="checkbox" id="inp" />
+    <label for="inp"></label>
+
+>   css:
+    input{
+	    width: 50px;
+	    height: 50px;
+	    display: none;
+    }
+    label{
+	    width: 200px;
+	    height: 100px;
+	    display: inline-block;
+	    border: 3px solid #ccc;
+	    border-radius: 100px;
+	    transition: .5s;
+    }
+    label:before{
+	    content: "off";
+	    font: 50px/2 "微软雅黑";
+	    color: #ccc;
+	    text-align: center;
+	    display: inline-block;
+	    width: 100px;
+	    height: 100px;
+	    background-color: #eee;
+	    border-radius: 100px;
+	    border: 1px solid #9d9d9d;
+	    box-shadow: 0 0 10px 1px #000;
+	    margin-top: -1px;
+	    margin-left: -1px;
+	    transition: .5s;
+    }
+    input:checked+label{
+	    background-color: #ccc;
+    }
+    input:checked+label:before{
+	    content: "on";
+	    background-color: #fff;
+	    margin-left: 99px;
+    }
+>   ```
 
 *   对数组`[5,6,6,7,8,8]`进行去重，ES5或者ES6方法，谈谈对ES6中`=>`的理解。
 
@@ -94,11 +95,50 @@ input:checked+label:before{
 
 *   JS  `split()` `join()`的区别？
 
+>   splice() 方法通过删除现有元素和/或添加新元素来更改一个数组的内容。
+
+>   join() 方法将一个数组（或一个类数组对象）的所有元素连接成一个字符串并返回这个字符串。
+
+>   splice()会修改原数组，join()不会修改原数组。
+
+>   splice()返回数组，join()返回字符串。
+
 *   JS  事件委托是什么？
 
 *   JS  闭包是什么，有什么特性，对页面有什么影响？
 
 *   Canvas和SVG图形的区别是什么？
+
+>   SVG
+
+>   SVG 是一种使用 XML 描述 2D 图形的语言。
+
+>   SVG 基于 XML，这意味着 SVG DOM 中的每个元素都是可用的。您可以为某个元素附加 JavaScript 事件处理器。
+
+>   在 SVG 中，每个被绘制的图形均被视为对象。如果 SVG 对象的属性发生变化，那么浏览器能够自动重现图形。
+
+>   特点：
+*   不依赖分辨率
+*   支持事件处理器
+*   最适合带有大型渲染区域的应用程序（比如谷歌地图）
+*   复杂度高会减慢渲染速度（任何过度使用 DOM 的应用都不快）
+*   不适合游戏应用
+
+
+>   Canvas
+
+>   Canvas 通过 JavaScript 来绘制 2D 图形。
+
+>   Canvas 是逐像素进行渲染的。
+
+>   在 canvas 中，一旦图形被绘制完成，它就不会继续得到浏览器的关注。如果其位置发生变化，那么整个场景也需要重新绘制，包括任何或许已被图形覆盖的对象。
+
+>   特点：
+*   依赖分辨率
+*   不支持事件处理器
+*   弱的文本渲染能力
+*   能够以 .png 或 .jpg 格式保存结果图像
+*   最适合图像密集型的游戏，其中的许多对象会被频繁重绘
 
 *   使用正则表达式将'I Am A Good Boy'中所有的单词首字母大写
 
@@ -108,13 +148,19 @@ input:checked+label:before{
 
 *   JS中常用的弹出式消息提醒的命令是什么？
 
+>   alert() 弹出个提示框 （警告框） 
+
+>   confirm() 弹出个确认框 （确认框） 
+
+>   prompt() 弹出个输入框 让你输入东西（信息输入框）
+
 *   简述你使用过的前段框架，并介绍其优缺点（除了jquery）
 
 *   写出以下代码的执行结果
 
         var name = 'lammpo'
         console.log(name)
-        if(test) name = 'horsevision'
+        if(test) {name = 'horsevision'}
         console.log(name)
         function test() {
             console.log(name)
