--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -74,12 +74,68 @@
 
 *   http和https请求的区别是什么？post请求和get请求的区别是什么？
 
+>   ### http和https请求的区别
+
+>   1.  http效率更高，https安全性更高。
+
+>   2.  http是超文本传输协议，https是安全超文本传输协议，
+
+>   3.  http信息是以明文方式传递，https是使用ssl加密传输协议传输数据，也就是通过第三方工具可以截取篡改http传输的数据，而https即使截获了没有密钥也白搭。
+
+>   4.  传输使用的默认端口也不一样，http使用的是80.https使用的是443
+
+>   5.  使用https的服务器必须从ca（证书管理机构）申请一个用于证明服务器用途类型的证书。
+
+>   6.  客户端和服务器端的通信过程：
+        1.  客户使用https的URL访问服务器，要求与服务器建立SSL连接。
+        2.  服务器收到客户端请求后，会将证书信息中包含的公钥传送一份给客户端。
+        3.  客户端与服务器开始协商SSL连接的安全等级，也就是信息加密的等级。
+        4.  客户端根据双方同意的安全等级，建立会话密钥，然后使用公钥将会话密钥加密，并传送给服务器。
+        5.  服务器利用自己的私钥解密出会话密钥。
+        6.  服务器利用会话密钥加密与客户端之间进行通信。
+
+
+>   ### post请求和get请求的区别
+
+>   1.  效率
+
+>   GET的意思是『得』，从服务器获取数据（也可以上传数据，参数就是），效率较高
+
+>   POST的意思是『给』，但可以向服务器发送数据和下载数据，效率不如GET
+
+>   2.  缓存
+
+>   GET 请求能够被缓存，默认的请求方式也是有缓存的
+
+>   POST请求默认不会缓存
+
+>   3.  安全性
+
+>   GET的所有参数全部包装在URL中，明文显示，且服务器的访问日志会记录，非常不安全
+
+>   POST的URL中只有资源路径，不包含参数，参数封装在二进制的数据体中，服务器也不会记录参数，相对安全。所有涉及用户隐私的数据都要用POST传输
+
+>   4.  数据量
+
+>   GET：不同的浏览器和服务器不同，一般限制在2~8K之间，更加常见的是1k以内
+
+>   POST方法提交的数据比较大，大小靠服务器的设定值限制
+
 *   你使用过的前端框架和模板引擎有哪些？模板加载器有哪些？简写ReactNative中如何绑定this的ES5和ES6的代码？
 
 *   编写一个双层回调函数。
 
 *   封装一个深度克隆方法ES5或ES6。
     `json={a:6,b:5,c:[1,2,3,4]};`
+
+>  
+```
+    function deepinCopy(sources) {
+        var obj = {};
+        obj = JSON.parse(JSON.stringify(sources));
+        return obj;
+    }
+```
 
 *   请用正则校验身份证号码，要求符合15位或18位，末尾可能是X。
 
@@ -105,6 +161,14 @@
 
 *   JS  事件委托是什么？
 
+>   事件委托就是利用冒泡的原理，把事件加到父元素或祖先元素上，触发执行效果。
+
+>   事件委托优点：
+
+>   1.  提高JavaScript性能。事件委托可以显著的提高事件的处理速度，减少内存的占用。
+
+>   2.  动态的添加DOM元素，不需要因为元素的改动而修改事件绑定。
+
 *   JS  闭包是什么，有什么特性，对页面有什么影响？
 
 *   Canvas和SVG图形的区别是什么？
@@ -118,11 +182,11 @@
 >   在 SVG 中，每个被绘制的图形均被视为对象。如果 SVG 对象的属性发生变化，那么浏览器能够自动重现图形。
 
 >   特点：
-*   不依赖分辨率
-*   支持事件处理器
-*   最适合带有大型渲染区域的应用程序（比如谷歌地图）
-*   复杂度高会减慢渲染速度（任何过度使用 DOM 的应用都不快）
-*   不适合游戏应用
+>   *   不依赖分辨率
+>   *   支持事件处理器
+>   *   最适合带有大型渲染区域的应用程序（比如谷歌地图）
+>   *   复杂度高会减慢渲染速度（任何过度使用 DOM 的应用都不快）
+>   *   不适合游戏应用
 
 
 >   Canvas
@@ -134,11 +198,11 @@
 >   在 canvas 中，一旦图形被绘制完成，它就不会继续得到浏览器的关注。如果其位置发生变化，那么整个场景也需要重新绘制，包括任何或许已被图形覆盖的对象。
 
 >   特点：
-*   依赖分辨率
-*   不支持事件处理器
-*   弱的文本渲染能力
-*   能够以 .png 或 .jpg 格式保存结果图像
-*   最适合图像密集型的游戏，其中的许多对象会被频繁重绘
+>   *   依赖分辨率
+>   *   不支持事件处理器
+>   *   弱的文本渲染能力
+>   *   能够以 .png 或 .jpg 格式保存结果图像
+>   *   最适合图像密集型的游戏，其中的许多对象会被频繁重绘
 
 *   使用正则表达式将'I Am A Good Boy'中所有的单词首字母大写
 
