--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -23,12 +23,13 @@
 *   用css3写一个开关按钮，按下时置灰变色，并改变按钮文字。（如按下之前是on，按下之后是off）。
 
 
->   ```
->   html:
+>   
+```
+    html:
     <input type="checkbox" id="inp" />
     <label for="inp"></label>
 
->   css:
+    css:
     input{
 	    width: 50px;
 	    height: 50px;
@@ -66,7 +67,7 @@
 	    background-color: #fff;
 	    margin-left: 99px;
     }
->   ```
+```
 
 *   对数组`[5,6,6,7,8,8]`进行去重，ES5或者ES6方法，谈谈对ES6中`=>`的理解。
 
@@ -75,17 +76,17 @@
 *   http和https请求的区别是什么？post请求和get请求的区别是什么？
 
 >   ### http和https请求的区别
-
+>   
 >   1.  http效率更高，https安全性更高。
-
+>   
 >   2.  http是超文本传输协议，https是安全超文本传输协议，
-
+>   
 >   3.  http信息是以明文方式传递，https是使用ssl加密传输协议传输数据，也就是通过第三方工具可以截取篡改http传输的数据，而https即使截获了没有密钥也白搭。
-
+>   
 >   4.  传输使用的默认端口也不一样，http使用的是80.https使用的是443
-
+>   
 >   5.  使用https的服务器必须从ca（证书管理机构）申请一个用于证明服务器用途类型的证书。
-
+>   
 >   6.  客户端和服务器端的通信过程：
         1.  客户使用https的URL访问服务器，要求与服务器建立SSL连接。
         2.  服务器收到客户端请求后，会将证书信息中包含的公钥传送一份给客户端。
@@ -96,29 +97,29 @@
 
 
 >   ### post请求和get请求的区别
-
+>   
 >   1.  效率
-
+>   
 >   GET的意思是『得』，从服务器获取数据（也可以上传数据，参数就是），效率较高
-
+>   
 >   POST的意思是『给』，但可以向服务器发送数据和下载数据，效率不如GET
-
+>   
 >   2.  缓存
-
+>   
 >   GET 请求能够被缓存，默认的请求方式也是有缓存的
-
+>   
 >   POST请求默认不会缓存
-
+>   
 >   3.  安全性
-
+>   
 >   GET的所有参数全部包装在URL中，明文显示，且服务器的访问日志会记录，非常不安全
-
+>   
 >   POST的URL中只有资源路径，不包含参数，参数封装在二进制的数据体中，服务器也不会记录参数，相对安全。所有涉及用户隐私的数据都要用POST传输
-
+>   
 >   4.  数据量
-
+>   
 >   GET：不同的浏览器和服务器不同，一般限制在2~8K之间，更加常见的是1k以内
-
+>   
 >   POST方法提交的数据比较大，大小靠服务器的设定值限制
 
 *   你使用过的前端框架和模板引擎有哪些？模板加载器有哪些？简写ReactNative中如何绑定this的ES5和ES6的代码？
