--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -68,6 +68,7 @@
 	    margin-left: 99px;
     }
 ```
+>   
 
 *   对数组`[5,6,6,7,8,8]`进行去重，ES5或者ES6方法，谈谈对ES6中`=>`的理解。
 
@@ -88,12 +89,18 @@
 >   5.  使用https的服务器必须从ca（证书管理机构）申请一个用于证明服务器用途类型的证书。
 >   
 >   6.  客户端和服务器端的通信过程：
-        1.  客户使用https的URL访问服务器，要求与服务器建立SSL连接。
-        2.  服务器收到客户端请求后，会将证书信息中包含的公钥传送一份给客户端。
-        3.  客户端与服务器开始协商SSL连接的安全等级，也就是信息加密的等级。
-        4.  客户端根据双方同意的安全等级，建立会话密钥，然后使用公钥将会话密钥加密，并传送给服务器。
-        5.  服务器利用自己的私钥解密出会话密钥。
-        6.  服务器利用会话密钥加密与客户端之间进行通信。
+>   
+>       1.  客户使用https的URL访问服务器，要求与服务器建立SSL连接。
+>   
+>       2.  服务器收到客户端请求后，会将证书信息中包含的公钥传送一份给客户端。
+>   
+>       3.  客户端与服务器开始协商SSL连接的安全等级，也就是信息加密的等级。
+>   
+>       4.  客户端根据双方同意的安全等级，建立会话密钥，然后使用公钥将会话密钥加密，并传送给服务器。
+>   
+>       5.  服务器利用自己的私钥解密出会话密钥。
+>   
+>       6.  服务器利用会话密钥加密与客户端之间进行通信。
 
 
 >   ### post请求和get请求的区别
