--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -3,9 +3,9 @@
 *   ES6中let、const、var的区别是什么？
     
 >   let和const在变量声明前使用会报错，var在变量声明前使用提示undefined。
-
+>   
 >   let和const有块级作用域，var则是全局
-
+>   
 >   const声明的是常量，声明后不可改变，对象则不改变地址，但对象本身是可变的。
 
 *   简要手绘盒子模型，并对边框和边距进行标注。
@@ -24,50 +24,50 @@
 
 
 >   
-```
-    html:
-    <input type="checkbox" id="inp" />
-    <label for="inp"></label>
+    ```
+        html:
+        <input type="checkbox" id="inp" />
+        <label for="inp"></label>
 
-    css:
-    input{
-	    width: 50px;
-	    height: 50px;
-	    display: none;
-    }
-    label{
-	    width: 200px;
-	    height: 100px;
-	    display: inline-block;
-	    border: 3px solid #ccc;
-	    border-radius: 100px;
-	    transition: .5s;
-    }
-    label:before{
-	    content: "off";
-	    font: 50px/2 "微软雅黑";
-	    color: #ccc;
-	    text-align: center;
-	    display: inline-block;
-	    width: 100px;
-	    height: 100px;
-	    background-color: #eee;
-	    border-radius: 100px;
-	    border: 1px solid #9d9d9d;
-	    box-shadow: 0 0 10px 1px #000;
-	    margin-top: -1px;
-	    margin-left: -1px;
-	    transition: .5s;
-    }
-    input:checked+label{
-	    background-color: #ccc;
-    }
-    input:checked+label:before{
-	    content: "on";
-	    background-color: #fff;
-	    margin-left: 99px;
-    }
-```
+        css:
+        input{
+	        width: 50px;
+	        height: 50px;
+	        display: none;
+        }
+        label{
+	        width: 200px;
+	        height: 100px;
+	        display: inline-block;
+	        border: 3px solid #ccc;
+	        border-radius: 100px;
+	        transition: .5s;
+        }
+        label:before{
+	        content: "off";
+	        font: 50px/2 "微软雅黑";
+	        color: #ccc;
+	        text-align: center;
+	        display: inline-block;
+	        width: 100px;
+	        height: 100px;
+	        background-color: #eee;
+	        border-radius: 100px;
+	        border: 1px solid #9d9d9d;
+	        box-shadow: 0 0 10px 1px #000;
+	        margin-top: -1px;
+	        margin-left: -1px;
+	        transition: .5s;
+        }
+        input:checked+label{
+	        background-color: #ccc;
+        }
+        input:checked+label:before{
+	        content: "on";
+	        background-color: #fff;
+	        margin-left: 99px;
+        }
+    ```
 >   
 
 *   对数组`[5,6,6,7,8,8]`进行去重，ES5或者ES6方法，谈谈对ES6中`=>`的理解。
@@ -155,7 +155,21 @@
 
 *   CSS3有哪些新特性
 
->   可以对CSS3的新特性做一个简单的分类，在布局方面新增了flex布局，在选择器方面新增了例如:first-of-type,nth-child等选择器， 在盒模型方面添加了box-sizing来改变盒模型，在动画方面增加了animation、2d变换、3d变换等。在颜色方面添加透明、rgba等，在字体方面 允许嵌入字体和设置字体阴影，同时当然也有盒子的阴影，最后还有关键的媒体查询。
+>   可以对CSS3的新特性做一个简单的分类：
+>   
+>   在布局方面新增了flex布局；
+>   
+>   在选择器方面新增了例如:first-of-type,nth-child等选择器； 
+>   
+>   在盒模型方面添加了box-sizing来改变盒模型；
+>   
+>   在动画方面增加了animation、2d变换、3d变换等；
+>   
+>   在颜色方面添加透明、rgba等；
+>   
+>   在字体方面 允许嵌入字体和设置字体阴影；
+>   
+>   同时当然也有盒子的阴影，最后还有关键的媒体查询。
 
 *   JS  `split()` `join()`的区别？
 
