--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -22,53 +22,50 @@
 
 *   用css3写一个开关按钮，按下时置灰变色，并改变按钮文字。（如按下之前是on，按下之后是off）。
 
+```
+    html:
+    <input type="checkbox" id="inp" />
+    <label for="inp"></label>
 
->   
-    ```
-        html:
-        <input type="checkbox" id="inp" />
-        <label for="inp"></label>
-
-        css:
-        input{
-	        width: 50px;
-	        height: 50px;
-	        display: none;
-        }
-        label{
-	        width: 200px;
-	        height: 100px;
-	        display: inline-block;
-	        border: 3px solid #ccc;
-	        border-radius: 100px;
-	        transition: .5s;
-        }
-        label:before{
-	        content: "off";
-	        font: 50px/2 "微软雅黑";
-	        color: #ccc;
-	        text-align: center;
-	        display: inline-block;
-	        width: 100px;
-	        height: 100px;
-	        background-color: #eee;
-	        border-radius: 100px;
-	        border: 1px solid #9d9d9d;
-	        box-shadow: 0 0 10px 1px #000;
-	        margin-top: -1px;
-	        margin-left: -1px;
-	        transition: .5s;
-        }
-        input:checked+label{
-	        background-color: #ccc;
-        }
-        input:checked+label:before{
-	        content: "on";
-	        background-color: #fff;
-	        margin-left: 99px;
-        }
-    ```
->   
+    css:
+    input{
+        width: 50px;
+        height: 50px;
+        display: none;
+    }
+    label{
+        width: 200px;
+        height: 100px;
+        display: inline-block;
+        border: 3px solid #ccc;
+        border-radius: 100px;
+        transition: .5s;
+    }
+    label:before{
+        content: "off";
+        font: 50px/2 "微软雅黑";
+        color: #ccc;
+        text-align: center;
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        background-color: #eee;
+        border-radius: 100px;
+        border: 1px solid #9d9d9d;
+        box-shadow: 0 0 10px 1px #000;
+        margin-top: -1px;
+        margin-left: -1px;
+        transition: .5s;
+    }
+    input:checked+label{
+        background-color: #ccc;
+    }
+    input:checked+label:before{
+        content: "on";
+        background-color: #fff;
+        margin-left: 99px;
+    }
+```
 
 *   对数组`[5,6,6,7,8,8]`进行去重，ES5或者ES6方法，谈谈对ES6中`=>`的理解。
 
@@ -136,7 +133,6 @@
 *   封装一个深度克隆方法ES5或ES6。
     `json={a:6,b:5,c:[1,2,3,4]};`
 
->  
 ```
     function deepinCopy(sources) {
         var obj = {};
@@ -153,7 +149,7 @@
 
 *   CSS优先级？
 
-*   CSS3有哪些新特性
+*   CSS3有哪些新特性。
 
 >   可以对CSS3的新特性做一个简单的分类：
 >   
@@ -174,21 +170,21 @@
 *   JS  `split()` `join()`的区别？
 
 >   splice() 方法通过删除现有元素和/或添加新元素来更改一个数组的内容。
-
+>   
 >   join() 方法将一个数组（或一个类数组对象）的所有元素连接成一个字符串并返回这个字符串。
-
+>   
 >   splice()会修改原数组，join()不会修改原数组。
-
+>   
 >   splice()返回数组，join()返回字符串。
 
 *   JS  事件委托是什么？
 
 >   事件委托就是利用冒泡的原理，把事件加到父元素或祖先元素上，触发执行效果。
-
+>   
 >   事件委托优点：
-
+>   
 >   1.  提高JavaScript性能。事件委托可以显著的提高事件的处理速度，减少内存的占用。
-
+>   
 >   2.  动态的添加DOM元素，不需要因为元素的改动而修改事件绑定。
 
 *   JS  闭包是什么，有什么特性，对页面有什么影响？
@@ -196,13 +192,13 @@
 *   Canvas和SVG图形的区别是什么？
 
 >   SVG
-
+>   
 >   SVG 是一种使用 XML 描述 2D 图形的语言。
-
+>   
 >   SVG 基于 XML，这意味着 SVG DOM 中的每个元素都是可用的。您可以为某个元素附加 JavaScript 事件处理器。
-
+>   
 >   在 SVG 中，每个被绘制的图形均被视为对象。如果 SVG 对象的属性发生变化，那么浏览器能够自动重现图形。
-
+>   
 >   特点：
 >   *   不依赖分辨率
 >   *   支持事件处理器
@@ -212,13 +208,13 @@
 
 
 >   Canvas
-
+>   
 >   Canvas 通过 JavaScript 来绘制 2D 图形。
-
+>   
 >   Canvas 是逐像素进行渲染的。
-
+>   
 >   在 canvas 中，一旦图形被绘制完成，它就不会继续得到浏览器的关注。如果其位置发生变化，那么整个场景也需要重新绘制，包括任何或许已被图形覆盖的对象。
-
+>   
 >   特点：
 >   *   依赖分辨率
 >   *   不支持事件处理器
@@ -226,7 +222,7 @@
 >   *   能够以 .png 或 .jpg 格式保存结果图像
 >   *   最适合图像密集型的游戏，其中的许多对象会被频繁重绘
 
-*   使用正则表达式将'I Am A Good Boy'中所有的单词首字母大写
+*   使用正则表达式将'I Am A Good Boy'中所有的单词首字母大写。
 
 *   写出至少三种求数组中的最大值的方法。
 
