--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -16,9 +16,9 @@
 
 *   html5和css3中新增了哪些标签和属性？
 
-    [HTML5](https://github.com/esperanza1211/note/blob/master/doc/HTML5.md)
-
-    [CSS3](https://github.com/esperanza1211/note/blob/master/doc/CSS3.md)
+>   [HTML5](https://github.com/esperanza1211/note/blob/master/doc/HTML5.md)
+>   
+>   [CSS3](https://github.com/esperanza1211/note/blob/master/doc/CSS3.md)
 
 *   用css3写一个开关按钮，按下时置灰变色，并改变按钮文字。（如按下之前是on，按下之后是off）。
 
@@ -231,9 +231,9 @@
 *   JS中常用的弹出式消息提醒的命令是什么？
 
 >   alert() 弹出个提示框 （警告框） 
-
+>   
 >   confirm() 弹出个确认框 （确认框） 
-
+>   
 >   prompt() 弹出个输入框 让你输入东西（信息输入框）
 
 *   简述你使用过的前段框架，并介绍其优缺点（除了jquery）
