--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -169,13 +169,9 @@
 
 *   JS  `split()` `join()`的区别？
 
->   splice() 方法通过删除现有元素和/或添加新元素来更改一个数组的内容。
+>   split() 方法使用指定的分隔符字符串将一个String对象分割成字符串数组，以将字符串分隔为子字符串，以确定每个拆分的位置。
 >   
 >   join() 方法将一个数组（或一个类数组对象）的所有元素连接成一个字符串并返回这个字符串。
->   
->   splice()会修改原数组，join()不会修改原数组。
->   
->   splice()返回数组，join()返回字符串。
 
 *   JS  事件委托是什么？
 
@@ -223,6 +219,15 @@
 >   *   最适合图像密集型的游戏，其中的许多对象会被频繁重绘
 
 *   使用正则表达式将'I Am A Good Boy'中所有的单词首字母大写。
+
+```
+function ReplaceFirstUper(str) {
+    str = str.toLowerCase();
+    return str.replace(/\b(\w)|\s(\w)/g, function(m) {
+        return m.toUpperCase();  
+    });
+}
+```
 
 *   写出至少三种求数组中的最大值的方法。
 
