--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -143,11 +143,35 @@
 
 *   请用正则校验身份证号码，要求符合15位或18位，末尾可能是X。
 
+>   [身份证号码简单校验](https://github.com/esperanza1211/note/blob/master/doc/RegExp/%E8%BA%AB%E4%BB%BD%E8%AF%81%E5%8F%B7%E7%A0%81%E7%AE%80%E5%8D%95%E9%AA%8C%E8%AF%81.md)
+
 *   如何理解前端MVC架构，简要画出流程图。
 
 *   CSS的盒模型？
 
+>   标准盒模型：
+>   
+>   可视宽/高　＝　width/height + padding + border
+>   
+>   content =  width/height
+
+>   怪异盒模型：
+>   
+>   可视宽/高　＝　width/height
+>   
+>   content =  width/height - padding - border
+>   
+>   在IE6，不设置文档说明，浏览器就进入怪异盒模型解析。
+
 *   CSS优先级？
+
+>   style行间样式　> id选择器　> class选择器 > 类型选择器 > 通配符*
+>   
+>   包含选择器的优先级是一种叠加关系
+>   
+>   群组选择器的优先级不会叠加
+>   
+>   !important优先级最高
 
 *   CSS3有哪些新特性。
 
@@ -233,6 +257,17 @@ function ReplaceFirstUper(str) {
 
 *   测试一个班级所有学生的成绩是否合格，例：`var arr = [90,89,65,40,100,77,50]`
 
+```
+function isPass(arr) {
+    for( let i = 0; i < arr.length; i++) {
+        if(arr[i] < 60) {
+            return "不合格";
+        } 
+    }
+    return "合格";
+}
+```
+    
 *   JS中常用的弹出式消息提醒的命令是什么？
 
 >   alert() 弹出个提示框 （警告框） 
@@ -242,20 +277,6 @@ function ReplaceFirstUper(str) {
 >   prompt() 弹出个输入框 让你输入东西（信息输入框）
 
 *   简述你使用过的前段框架，并介绍其优缺点（除了jquery）
-
-*   写出以下代码的执行结果
-
-        var name = 'lammpo'
-        console.log(name)
-        if(test) {name = 'horsevision'}
-        console.log(name)
-        function test() {
-            console.log(name)
-            var name = 'test'
-            console.log(name)
-        }
-        test()
-        console.log(name)
 
 *   以下promise的区别是什么，a,b都返回一个promise对象
 
