--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -255,6 +255,8 @@ function ReplaceFirstUper(str) {
 
 *   写出至少三种求数组中的最大值的方法。
 
+>   [数组最大值](https://github.com/esperanza1211/note/blob/master/doc/%E6%95%B0%E7%BB%84%E6%9C%80%E5%A4%A7%E5%80%BC.md)
+
 *   测试一个班级所有学生的成绩是否合格，例：`var arr = [90,89,65,40,100,77,50]`
 
 ```
