--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -1,5 +1,11 @@
 #   面试题
 
+*   块标签和行内标签有哪些？
+
+>   块标签：header/footer/nav/section/article/aside/main/h1-h6/p/ul/ol/li/dl/dt/dd/div/figure/figcaption/form/option
+>   
+>   内嵌标签：strong/em/span/a/mark/time/b/label/small/big/s
+
 *   ES6中let、const、var的区别是什么？
     
 >   let和const在变量声明前使用会报错，var在变量声明前使用提示undefined。
@@ -126,8 +132,6 @@
 >   
 >   POST方法提交的数据比较大，大小靠服务器的设定值限制
 
-*   你使用过的前端框架和模板引擎有哪些？模板加载器有哪些？简写ReactNative中如何绑定this的ES5和ES6的代码？
-
 *   编写一个双层回调函数。
 
 *   封装一个深度克隆方法ES5或ES6。
@@ -144,8 +148,6 @@
 *   请用正则校验身份证号码，要求符合15位或18位，末尾可能是X。
 
 >   [身份证号码简单校验](https://github.com/esperanza1211/note/blob/master/doc/RegExp/%E8%BA%AB%E4%BB%BD%E8%AF%81%E5%8F%B7%E7%A0%81%E7%AE%80%E5%8D%95%E9%AA%8C%E8%AF%81.md)
-
-*   如何理解前端MVC架构，简要画出流程图。
 
 *   CSS的盒模型？
 
@@ -208,6 +210,8 @@
 >   2.  动态的添加DOM元素，不需要因为元素的改动而修改事件绑定。
 
 *   JS  闭包是什么，有什么特性，对页面有什么影响？
+
+>   [JS闭包](https://github.com/esperanza1211/note/blob/master/doc/JS%E9%97%AD%E5%8C%85.md)
 
 *   Canvas和SVG图形的区别是什么？
 
@@ -290,3 +294,24 @@ function isPass(arr) {
         })
         a().then(b())
         a().then(b)
+
+
+*   ajax怎么上传图片？
+
+>   将图片用base64转码，然后上传
+
+*   跨域原理及解决办法。
+
+>   [跨域](https://github.com/esperanza1211/note/blob/master/doc/%E8%B7%A8%E5%9F%9F.md)
+
+*   React的生命周期有哪些？
+
+>   [React的生命周期](https://github.com/esperanza1211/note/blob/master/doc/react%E7%9A%84%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F.md)
+
+*   Vue的生命周期有哪些？
+
+>   [Vue的生命周期](https://github.com/esperanza1211/note/blob/master/doc/vue%E7%9A%84%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F.md)
+
+*   如何理解前端MVC架构，简要画出流程图。
+
+*   你使用过的前端框架和模板引擎有哪些？模板加载器有哪些？简写ReactNative中如何绑定this的ES5和ES6的代码？
