--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -22,9 +22,9 @@
 
 *   html5和css3中新增了哪些标签和属性？
 
->   [HTML5](https://github.com/esperanza1211/note/blob/master/doc/HTML5.md)
+>   [HTML5](https://github.com/esperanza1211/note/blob/master/doc/HTML%7CCSS/HTML5.md)
 >   
->   [CSS3](https://github.com/esperanza1211/note/blob/master/doc/CSS3.md)
+>   [CSS3](https://github.com/esperanza1211/note/blob/master/doc/HTML%7CCSS/CSS3.md)
 
 *   用css3写一个开关按钮，按下时置灰变色，并改变按钮文字。（如按下之前是on，按下之后是off）。
 
@@ -74,6 +74,8 @@
 ```
 
 *   对数组`[5,6,6,7,8,8]`进行去重，ES5或者ES6方法，谈谈对ES6中`=>`的理解。
+
+>   [数组去重](https://github.com/esperanza1211/note/blob/master/doc/JS/%E6%95%B0%E7%BB%84%E5%8E%BB%E9%87%8D.md)
 
 *   点击一个按钮，发出ajax请求，如何防止用户在此请求方式返回之前再次点击。
 
@@ -211,7 +213,7 @@
 
 *   JS  闭包是什么，有什么特性，对页面有什么影响？
 
->   [JS闭包](https://github.com/esperanza1211/note/blob/master/doc/JS%E9%97%AD%E5%8C%85.md)
+>   [JS闭包](https://github.com/esperanza1211/note/blob/master/doc/JS/JS%E9%97%AD%E5%8C%85.md)
 
 *   Canvas和SVG图形的区别是什么？
 
@@ -259,7 +261,7 @@ function ReplaceFirstUper(str) {
 
 *   写出至少三种求数组中的最大值的方法。
 
->   [数组最大值](https://github.com/esperanza1211/note/blob/master/doc/%E6%95%B0%E7%BB%84%E6%9C%80%E5%A4%A7%E5%80%BC.md)
+>   [数组最大值](https://github.com/esperanza1211/note/blob/master/doc/JS/%E6%95%B0%E7%BB%84%E6%9C%80%E5%A4%A7%E5%80%BC.md)
 
 *   测试一个班级所有学生的成绩是否合格，例：`var arr = [90,89,65,40,100,77,50]`
 
@@ -302,15 +304,15 @@ function isPass(arr) {
 
 *   跨域原理及解决办法。
 
->   [跨域](https://github.com/esperanza1211/note/blob/master/doc/%E8%B7%A8%E5%9F%9F.md)
+>   [跨域](https://github.com/esperanza1211/note/blob/master/doc/AJAX/%E8%B7%A8%E5%9F%9F.md)
 
 *   React的生命周期有哪些？
 
->   [React的生命周期](https://github.com/esperanza1211/note/blob/master/doc/react%E7%9A%84%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F.md)
+>   [React的生命周期](https://github.com/esperanza1211/note/blob/master/doc/React/react%E7%9A%84%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F.md)
 
 *   Vue的生命周期有哪些？
 
->   [Vue的生命周期](https://github.com/esperanza1211/note/blob/master/doc/vue%E7%9A%84%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F.md)
+>   [Vue的生命周期](https://github.com/esperanza1211/note/blob/master/doc/Vue/vue%E7%9A%84%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F.md)
 
 *   如何理解前端MVC架构，简要画出流程图。
 
