--- a/doc/JS/数组去重.md
+++ b/doc/JS/数组去重.md
@@ -80,4 +80,79 @@ function unique(arr) {
 }
 ```
 
-6.  
+6.  利用数组原型对象上的filter和includes方法。
+
+```
+function unique(arr) {
+    var res = [];
+    res = arr.filter(item => {
+        return res.includes(item) ? '' : res.push(item);
+    })
+    return res;
+}
+```
+
+7.  利用数组原型对象上的forEach和includes方法。
+
+```
+function unique(arr) {
+    var res = [];
+    arr.forEach(item => {
+        res.includes(item) ? '' : res.push(item);
+    })
+    return res;
+}
+```
+
+8.  利用数组原型对象上的splice方法。
+
+```
+function unique(arr) {
+    var i, j, len = arr.length;
+    for(i = 0; i < len; i++) {
+        for(j = i + 1; j < len; j++) {
+            if(arr[i] == arr[j]) {
+                arr.splice(j, 1);
+                len--;
+                j--;
+            }
+        }
+    }
+    return arr;
+}
+```
+
+9.  利用数组原型对象上的lastIndexOf方法。
+
+```
+function unique(arr) {
+    var res = [];
+    for(var i = 0; i < arr.length; i++) {
+        res.lastIndexOf(arr[i]) !== -1 ? '' : res.push(arr[i])
+    }
+    return res;
+}
+```
+
+10. 利用ES6的set方法。
+
+```
+function unique(arr) {
+    //Set数据结构，它类似于数组，其成员的值都是唯一的
+    return Array.from(new Set(arr));//利用Array.from将Set数据结构转成数组
+}
+```
+
+11. 利用ES5的reduce方法。
+
+```
+function unique(arr) {
+    let result = arr.sort().reduce((init, current) => {  
+        if(init.length===0 || init[init.length-1]!==current){  
+            init.push(current);  
+        }  
+        return init;  
+    }, []); 
+    return result;
+}
+```
