--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -79,6 +79,8 @@
 
 *   点击一个按钮，发出ajax请求，如何防止用户在此请求方式返回之前再次点击。
 
+>   [防止重复发出AJAX请求](https://github.com/esperanza1211/note/blob/master/doc/AJAX/%E9%98%B2%E6%AD%A2%E9%87%8D%E5%A4%8D%E5%8F%91%E9%80%81AJAX%E8%AF%B7%E6%B1%82.md)
+
 *   http和https请求的区别是什么？post请求和get请求的区别是什么？
 
 >   ### http和https请求的区别
@@ -284,8 +286,6 @@ function isPass(arr) {
 >   
 >   prompt() 弹出个输入框 让你输入东西（信息输入框）
 
-*   简述你使用过的前段框架，并介绍其优缺点（除了jquery）
-
 *   以下promise的区别是什么，a,b都返回一个promise对象
 
         a().then(function(){
@@ -312,5 +312,7 @@ function isPass(arr) {
 >   [Vue的生命周期](https://github.com/esperanza1211/note/blob/master/doc/Vue/vue%E7%9A%84%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F.md)
 
 *   如何理解前端MVC架构，简要画出流程图。
+
+*   简述你使用过的前段框架，并介绍其优缺点（除了jquery）
 
 *   你使用过的前端框架和模板引擎有哪些？模板加载器有哪些？简写ReactNative中如何绑定this的ES5和ES6的代码？
