--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -313,6 +313,8 @@ function isPass(arr) {
 
 *   如何理解前端MVC架构，简要画出流程图。
 
+>   [MVC架构](https://github.com/esperanza1211/note/blob/master/doc/JS/%E5%89%8D%E7%AB%AFMVC%E6%9E%B6%E6%9E%84%E5%92%8CMVVM%E6%9E%B6%E6%9E%84.md)
+
 *   简述你使用过的前段框架，并介绍其优缺点（除了jquery）
 
 *   你使用过的前端框架和模板引擎有哪些？模板加载器有哪些？简写ReactNative中如何绑定this的ES5和ES6的代码？
