--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -20,6 +20,8 @@
 
 *   界面div三平分除了flex布局外，简写其他两种布局代码。
 
+*   CSS实现垂直水平居中。
+
 *   html5和css3中新增了哪些标签和属性？
 
 >   [HTML5](https://github.com/esperanza1211/note/blob/master/doc/HTML%7CCSS/HTML5.md)
@@ -315,6 +317,3 @@ function isPass(arr) {
 
 >   [MVC架构](https://github.com/esperanza1211/note/blob/master/doc/JS/%E5%89%8D%E7%AB%AFMVC%E6%9E%B6%E6%9E%84%E5%92%8CMVVM%E6%9E%B6%E6%9E%84.md)
 
-*   简述你使用过的前段框架，并介绍其优缺点（除了jquery）
-
-*   你使用过的前端框架和模板引擎有哪些？模板加载器有哪些？简写ReactNative中如何绑定this的ES5和ES6的代码？
