--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -20,7 +20,11 @@
 
 *   界面div三平分除了flex布局外，简写其他两种布局代码。
 
+>   [三等分](https://github.com/esperanza1211/note/blob/master/doc/HTML%7CCSS/%E7%95%8C%E9%9D%A2%E4%B8%89%E5%B9%B3%E5%88%86.md)
+
 *   CSS实现垂直水平居中。
+
+>   [垂直水平居中](https://github.com/esperanza1211/note/blob/master/doc/HTML%7CCSS/%E5%B1%85%E4%B8%AD%E9%97%AE%E9%A2%98.md)
 
 *   html5和css3中新增了哪些标签和属性？
 
