--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -82,6 +82,8 @@
 *   对数组`[5,6,6,7,8,8]`进行去重，ES5或者ES6方法，谈谈对ES6中`=>`的理解。
 
 >   [数组去重](https://github.com/esperanza1211/note/blob/master/doc/JS/%E6%95%B0%E7%BB%84%E5%8E%BB%E9%87%8D.md)
+>   
+>   [ES6的箭头函数](https://github.com/esperanza1211/note/blob/master/doc/JS/ES6%E7%9A%84%E7%AE%AD%E5%A4%B4%E5%87%BD%E6%95%B0.md)
 
 *   点击一个按钮，发出ajax请求，如何防止用户在此请求方式返回之前再次点击。
 
