--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -8,9 +8,11 @@
 
 *   ES6中let、const、var的区别是什么？
     
->   let和const在变量声明前使用会报错，var在变量声明前使用提示undefined。
+>   let和const在变量声明前使用会报错，var在变量声明前使用提示undefined，变量声明预解析。
 >   
 >   let和const有块级作用域，var则是全局
+>   
+>   let不支持重复声明，var可以重复声明
 >   
 >   const声明的是常量，声明后不可改变，对象则不改变地址，但对象本身是可变的。
 
