--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -81,6 +81,9 @@
     }
 ```
 
+*   rem布局的那个函数怎么写？
+
+
 *   对数组`[5,6,6,7,8,8]`进行去重，ES5或者ES6方法，谈谈对ES6中`=>`的理解。
 
 >   [数组去重](https://github.com/esperanza1211/note/blob/master/doc/JS/%E6%95%B0%E7%BB%84%E5%8E%BB%E9%87%8D.md)
@@ -225,6 +228,10 @@
 
 >   [JS闭包](https://github.com/esperanza1211/note/blob/master/doc/JS/JS%E9%97%AD%E5%8C%85.md)
 
+*   原型和原型链？
+
+>   [原型和原型链]()
+
 *   Canvas和SVG图形的区别是什么？
 
 >   SVG
@@ -301,6 +308,10 @@ function isPass(arr) {
 *   React的生命周期有哪些？
 
 >   [React的生命周期](https://github.com/esperanza1211/note/blob/master/doc/React/react%E7%9A%84%E7%94%9F%E5%91%BD%E5%91%A8%E6%9C%9F.md)
+
+*   redux是什么？
+
+*   
 
 *   Vue的生命周期有哪些？
 
