--- a/doc/面试题.md
+++ b/doc/面试题.md
@@ -10,7 +10,7 @@
     
 >   let和const在变量声明前使用会报错，var在变量声明前使用提示undefined，变量声明预解析。
 >   
->   let和const有块级作用域，var则是全局
+>   let和const有块级作用域，var声明在函数内则在函数内具有作用域，声明在函数外则是全局。
 >   
 >   let不支持重复声明，var可以重复声明
 >   
@@ -82,6 +82,8 @@
 ```
 
 *   rem布局的那个函数怎么写？
+
+>   [rem布局](https://github.com/esperanza1211/note/blob/master/doc/HTML%7CCSS/rem%E5%B8%83%E5%B1%80.md)
 
 
 *   对数组`[5,6,6,7,8,8]`进行去重，ES5或者ES6方法，谈谈对ES6中`=>`的理解。
@@ -230,7 +232,7 @@
 
 *   原型和原型链？
 
->   [原型和原型链]()
+>   [原型和原型链](https://github.com/esperanza1211/note/blob/master/doc/JS/%E5%8E%9F%E5%9E%8B%E5%92%8C%E5%8E%9F%E5%9E%8B%E9%93%BE.md)
 
 *   Canvas和SVG图形的区别是什么？
 
